# devbench

./: .gitignore  PLAN.md  README.md
configs/: default.yaml  incremental_files.yaml
docs/: preflight.md  schema.json  scoring.md  storage.md
scripts/: compare.sh  run.sh
scripts/common/: aggregate.py  lib.ps1  lib.sh  report.py  run_tier.sh  runtime_init.ps1  runtime_init.sh  self_test.ps1  self_test.sh  time_run.sh
scripts/linux/: bootstrap.sh  probe.sh
scripts/macos/: bootstrap.sh  probe.sh
scripts/windows/: bootstrap.ps1  probe.ps1
workloads/compile/: _lib.sh
workloads/compile/duckdb/: run.sh
workloads/compile/kubernetes/: run.sh
workloads/compile/linux_kernel/: run.sh
workloads/compile/llvm/: run.sh
workloads/compile/ripgrep/: run.sh
workloads/compile/typescript/: run.sh
workloads/runtime/docker_build_rust/: .dockerignore  Cargo.toml  Dockerfile  run.sh
workloads/runtime/docker_build_rust/src/: main.rs
workloads/runtime/pytest_pandas/: run.sh
workloads/runtime/renaissance/: run.sh
workloads/runtime/vite_tests/: run.sh
workloads/synthetic/fio/: run.sh
workloads/synthetic/sevenzip/: run.sh
workloads/synthetic/sysbench_cpu/: run.sh
